[fix][163582623] Upload documents step in application form not wrapping in mobile view (#74)
* Fix width for application form and refresh dist

* Merge conflict

--- a/src/components/formSection/formSection.scss
+++ b/src/components/formSection/formSection.scss
@@ -1,10 +1,6 @@
 @import "../styles/utils.scss";
 
 .headerSection {
-  @include for-desktop-up {
-    width: $sub-content-width;
-  }
-
   &.large {
     margin-bottom: $space-8;
   }
