--- a/src/components/styles/variables.scss
+++ b/src/components/styles/variables.scss
@@ -86,9 +86,6 @@ $x-large: 20px;
 $xx-large: 24px;
 $xxx-large: 28px;
 
-// container size
-$sub-content-width: 770px;
-
 // font weight
 $weight-light: 300;
 $weight-regular: 400;
